2008-02-25 17:38  art

	* [r60]
	  - Just a small change in UnitInOut and UnitText

2008-02-25 17:03  art

	* [r59]
	  - Different changes in the CMakeFiles to support static build of
	  osgPPU
	  - Viewport of the Unit is now not applied directly but through
	  the StateSet
	  - Some small optimizations

2008-01-30 20:48  art

	* [r58]
	  - build.vc8 directory removed, sinc it is not needed for a proper
	  build on windows. Build on windows tested with Visual C++ 2008
	  Express (VC9) and with CMake 2.4

2008-01-30 20:13  art

	* [r57]
	  - CMake listing changed to support osg version as option

2008-01-30 19:23  art

	* [r56]
	  - Non-used makefile removed

2008-01-30 15:08  art

	* [r55]
	  - UnitBypass.cpp added instead of inlined functions in
	  UnitBypass.h

2008-01-29 22:16  art

	* [r54]
	  - just come docs changed

2008-01-29 22:14  art

	* [r53]
	  - just the changelog

2008-01-29 22:13  art

	* [r52]
	  - Very big changes in the interface
	  - UnitInOut has now got the components about mipmapping which
	  were moved from Unit
	  - Unit is now pure abstract base class
	  - UnitBypass added which do nothing as bypass the input to the
	  output
	  - osgdb_ppu plugin changed to support the new unit
	  - .ppu files from bin/Data adapted to the new interface

2008-01-29 19:48  art

	* [r51]
	  - Authors/Contributors list added to the svn. The authors are not
	  sorted in any manner.

2008-01-29 19:33  art

	* [r50]
	  - Licence text in all headers and source files changed
	  - Now the LGPL should be seen everywhere
	  - Readme file get new content about the osgPPU plugin to osg

2008-01-29 19:07  art

	* [r49]
	  - New plugin for reading and writing the ppu pipelines is now
	  activated in the code
	  - New example application "viewer" is actiaved
	  - Viewer allows a simple viewing of pipelines by loading them
	  from files

2008-01-29 16:02  art

	* [r48]
	  - Currently disabling the viewer application because a proper ppu
	  loading system is required
